--- a/online-store/src/app/app.component.html
+++ b/online-store/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-nav></app-nav>
+<app-nav></app-nav>
 
 <div class="container">
   <div class="row">
@@ -12,6 +12,6 @@
       <app-footer></app-footer>
     </div>
   </div>
-</div> -->
+</div>
 <app-nav></app-nav>
 <router-outlet></router-outlet>
