+registration +login forms and routing

--- a/online-store/src/app/components/product-list/product-list.component.html
+++ b/online-store/src/app/components/product-list/product-list.component.html
@@ -4,10 +4,10 @@
 
 <div *ngFor = "let product of productsList">
 
-    <img [src]="product.image || product.image_src" 
+    <img [src]="product.image || product.image_src"
           [routerLink]="['/products', product.id ]" >
     <p (click)= "onSelect(product)">
-      <a [routerLink]="['/products', product.id ]">{{product.name}}</a>
+      <a routerLink="/products/product.id">{{product.name}}</a>
       <br>
       <a >
         {{product.price}} тнг.</a><br>
