--- a/online-store/src/app/components/login/login.component.html
+++ b/online-store/src/app/components/login/login.component.html
@@ -7,5 +7,5 @@
   <button>Sign In</button>
 </div>
 <div class="new">
-  <p id="new">New? <a href="">Create an account</a></p>
+  <p id="new">New? <a routerLink="/registration">Create an account</a></p>
 </div>
