--- a/online-store/src/app/components/category-list/category-list.component.html
+++ b/online-store/src/app/components/category-list/category-list.component.html
@@ -1,6 +1,12 @@
 <h2>Categories</h2>
-<div>
-    <ul>
-      <li *ngFor = "let category of categories"><a [routerLink]="['/categories/',category.id]">{{category.name}}</a></li>
-    </ul>
-  </div>
+<!--<div>-->
+<!--    <ul>-->
+<!--      <li *ngFor = "let category of categories"><a [routerLink]="['/categories/',category.id]">{{category.name}}</a></li>-->
+<!--    </ul>-->
+<!--  </div>-->
+
+<ul class="heroes">
+  <li *ngFor = "let category of categories">
+   <a [routerLink]="['/categories/',category.id]">{{category.name}}</a>
+  </li>
+</ul>
