--- a/online-store/src/app/components/login/login.component.css
+++ b/online-store/src/app/components/login/login.component.css
@@ -1,4 +1,5 @@
 .vhod{
+
   width: 400px;
   height: 350px;
   margin-left: 440px;
@@ -7,7 +8,15 @@
   margin-top: 150px;
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
+
 }
+#container {
+  line-height: 20px;
+  padding: 20px 20px;
+  margin: 20px 20px;
+  font-size: 30px;
+}
+
 .inputs{
   width: 300px;
   height: 30px;
