--- a/online-store/src/app/components/product-list/product-list.component.html
+++ b/online-store/src/app/components/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 <p>product-list works!</p>
 
 <!-- <button (onClick)="">By price</button> -->
-
+<div class="divProduct">
 <div *ngFor = "let product of productsList">
 
     <img [src]="product.image || product.image_src"
@@ -15,3 +15,4 @@
     </p>
 
   </div>
+</div>
