--- a/online-store/src/app/components/shared/header/header.component.html
+++ b/online-store/src/app/components/shared/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<div class="slider-holder">
+    <span id="slider-image-1"></span>
+    <span id="slider-image-2"></span>
+    <span id="slider-image-3"></span>
+    <div class="image-holder">
+        <img src="https://cdn.shopify.com/s/files/1/0022/2642/1805/products/61aWzcFxCVL._SL1001_2048x.jpg?v=1561623948" class="slider-image" />
+        <img src="https://pagedesignshop.com/wp-content/uploads/2018/06/180326-cell-phone-security-se-202p_78e38e509db33dc26c48d6be6f3a6d98.jpg" class="slider-image" />
+        <img src="https://cdn.mos.cms.futurecdn.net/ahevYTh9pWRzkNPF85MQhb-1200-80.jpg" class="slider-image" />
+    </div>
+    <div class="button-holder">
+        <a href="#slider-image-1" class="slider-change"></a>
+        <a href="#slider-image-2" class="slider-change"></a>
+        <a href="#slider-image-3" class="slider-change"></a>
+    </div>
+</div>
+
+
