--- a/online-store/src/app/app.component.html
+++ b/online-store/src/app/app.component.html
@@ -14,4 +14,7 @@
   </div>
 </div> -->
 <app-nav></app-nav>
+<!-- <app-header></app-header> -->
+ 
 <router-outlet></router-outlet>
+<app-footer></app-footer>
