--- a/online-store/src/app/components/product-list/product-list.component.html
+++ b/online-store/src/app/components/product-list/product-list.component.html
@@ -4,14 +4,14 @@
 
 <div *ngFor = "let product of productsList">
 
-    <img [src]="product.image || product.image_src" 
-          [routerLink]="['/products', product.id ]" >
-    <p (click)= "onSelect(product)">
-      <a [routerLink]="['/products', product.id ]">{{product.name}}</a>
-      <br>
-      <a >
-        {{product.price}} тнг.</a><br>
-      <button (click)= "onAddToShopCart(product)" >Add to Cart</button>
-    </p>
+  <img [src]="product.image || product.image_src" 
+        [routerLink]="['/products', product.id ]" >
+  <p (click)= "onSelect(product)">
+    <a [routerLink]="['/products', product.id ]">{{product.name}}</a>
+    <br>
+    <a >
+      {{product.price}} ₸</a><br>
+    <button (click)= "onAddToShopCart(product)" >Add to Cart</button>
+  </p>
 
-  </div>
+</div>
