--- a/online-store/src/app/components/shared/footer/footer.component.html
+++ b/online-store/src/app/components/shared/footer/footer.component.html
@@ -1,1 +1,42 @@
-<p>footer works!</p>
+<body>
+    <footer class="footer-distributed">
+
+        <div class="footer-left">
+
+            <h3>WebDev<span>Project</span></h3>
+
+            <br>
+            <p class="footer-company-name">webdevproject &copy; 2020</p>
+        </div>
+
+        <div class="footer-center">
+
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>46 Tole bi Street</span> Almaty, Kazakhstan</p>
+            </div>
+
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+7 727 22222</p>
+            </div>
+
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:kbtu@kbtu.com">kbtu@webdevproject_kbtu.com</a></p>
+            </div>
+
+        </div>
+
+        <div class="footer-right">
+
+            <p class="footer-company-about">
+                <span>About the project</span>
+                Web Dev Trick is a blog for web designers, graphic designers, web developers &amp; SEO Learner.
+            </p>
+
+        </div>
+
+    </footer>
+
+</body>
