--- a/online-store/src/app/components/shared/nav/nav.component.html
+++ b/online-store/src/app/components/shared/nav/nav.component.html
@@ -1,10 +1,23 @@
 <div class="topnav">
   <a [routerLink]="['']">Home</a>
-  <a [routerLink]="['categories']">Каталог</a>
-  <a [routerLink]="['products']">Все ассортименты</a>
-  <a [routerLink]="['cart']">Корзина</a>
+  <a [routerLink]="['categories']">Catalogue</a>
+  <a [routerLink]="['products']">All assortiments</a>
+  <a [routerLink]="['cart']">Cart</a>
   <div class="topnav-right">
-      <a [routerLink]="['login']">Войти</a>
-      <a [routerLink]="['registration']">Регистрация</a>
+      <a [routerLink]="['login']">Sign In</a>
+      <a [routerLink]="['registration']">Registration</a>
   </div> 
 </div>
+
+
+<!-- <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+  <h5 class="my-0 mr-md-auto font-weight-normal">Company name</h5>
+  <nav class="my-2 my-md-0 mr-md-3">
+    <a class="p-2 text-dark" href="#">Home</a>
+    <a class="p-2 text-dark" href="#">Catalogue</a>
+    <a class="p-2 text-dark" href="#">All assortiments</a>
+    <a class="p-2 text-dark" href="#">Cart</a>
+  </nav class="topnav-right">
+  <a class="btn btn-outline-primary" href="#">Sign up</a>
+  <a class="btn btn-outline-primary" href="#">Registration</a>
+</div> -->
