--- a/online-store/src/app/components/first-page-home/first-page-home.component.html
+++ b/online-store/src/app/components/first-page-home/first-page-home.component.html
@@ -1,3 +1,7 @@
-<p>first-page-home works!</p>
 
-<app-product-search></app-product-search>
+
+<div class="welcome">
+  <H1>Welcome to TechShop</H1>
+  <H2>the best prices for the best customers</H2>
+  <H1>Thank you for choosing us!</H1>
+</div>
