--- a/online-store/src/app/components/registration/registration.component.html
+++ b/online-store/src/app/components/registration/registration.component.html
@@ -1,4 +1,4 @@
-<p>registration works!</p>
+<div class="center">
 <div class="registr">
   <h2>Create your account</h2>
   <table>
@@ -17,4 +17,5 @@
   </table>
   <p>Make sure it's at least 15 characters.</p>
   <button id="create">Create</button>
+</div>
 </div>
