--- a/online-store/src/app/components/shared/nav/nav.component.html
+++ b/online-store/src/app/components/shared/nav/nav.component.html
@@ -6,5 +6,8 @@
   <div class="topnav-right">
       <a [routerLink]="['login']">Войти</a>
       <a [routerLink]="['registration']">Регистрация</a>
-  </div> 
+  </div>
+  <div>
+  <a><app-product-search></app-product-search></a>
+  </div>
 </div>
