--- a/online-store/src/app/components/login/login.component.html
+++ b/online-store/src/app/components/login/login.component.html
@@ -1,4 +1,5 @@
-<p>login works!</p>
+
+<div class="center">
 <div class="vhod">
   <p>Username</p>
   <input type="text" class="inputs"> <br>
@@ -6,6 +7,7 @@
   <input type="password"  class="inputs">
   <button>Sign In</button>
 </div>
-<div class="new">
-  <p id="new">New? <a routerLink="/registration">Create an account</a></p>
+  <div class="new">
+    <p id="new">New? <a routerLink="/registration">Create an account</a></p>
+  </div>
 </div>
