--- a/online-store/src/app/components/product-list/product-list.component.html
+++ b/online-store/src/app/components/product-list/product-list.component.html
@@ -1,18 +1,18 @@
-<p>product-list works!</p>
+
 
 <!-- <button (onClick)="">By price</button> -->
-<div class="divProduct">
-<div *ngFor = "let product of productsList">
-
-    <img [src]="product.image || product.image_src"
-          [routerLink]="['/products', product.id ]" >
+<div class="grid grid-pad">
+<a *ngFor = "let product of productsList" class="col-1-3">
+  <div class="borders">
+    <div class="image-cover"><img [src]="product.image || product.image_src"
+          [routerLink]="['/products', product.id ]" ></div>
     <p (click)= "onSelect(product)">
-      <a routerLink="/products/product.id">{{product.name}}</a>
-      <br>
-      <a >
-        {{product.price}} тнг.</a><br>
-      <button (click)= "onAddToShopCart(product)" >Add to Cart</button>
+      <br><a routerLink="/products/{{product.id}}"><span><h3>{{product.name}}</h3></span></a>
+     <a><h4> Цена: {{product.price}} тнг.</h4></a>
+    <br><button [routerLink]="['/products', product.id ]" class="myButton">Detail</button>
+      <button (click)= "onAddToShopCart(product)" class="myButton">Add to Cart</button>
     </p>
-
   </div>
+  </a>
 </div>
+
