+interface for user for backend; +html and style for shopcarting

--- a/online-store/src/app/components/category-list/category-list.component.html
+++ b/online-store/src/app/components/category-list/category-list.component.html
@@ -1,5 +1,5 @@
 <div class="centere">
-<h1>Categories</h1>
+<h1 style="color:aquamarine;background: #5383d3"><B>Categories</B></h1>
 <ul class="heroes">
   <li *ngFor = "let category of categories">
    <a [routerLink]="['/categories/',category.id]">{{category.name}}</a>
