--- a/online-store/src/app/components/first-page-home/first-page-home.component.html
+++ b/online-store/src/app/components/first-page-home/first-page-home.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="welcome">
-  <H1>Welcome to TechShop</H1>
-  <H2>the best prices for the best customers</H2>
-  <H1>Thank you for choosing us!</H1>
+  <H1><span style="background: #33383b">Welcome to TechShop</span></H1>
+  <H2><span style="background: #33383b">the best prices for the best customers</span></H2>
+  <H1><span style="background: #33383b">Thank you for choosing us!</span></H1>
 </div>
