--- a/online-store/src/app/components/category-list/category-list.component.css
+++ b/online-store/src/app/components/category-list/category-list.component.css
@@ -10,7 +10,7 @@
   background-color: #EEE;
   margin: .5em;
   padding: .3em 0;
-  height: 1.6em;
+  height: 3em;
   border-radius: 4px;
   text-align: center;
 }
@@ -27,8 +27,10 @@
   position: relative;
   display: block;
   width: 250px;
-  margin-left: 30px;
+  /*margin-left: 30px;*/
   text-align: center;
+  padding-top: 10px;
+  padding-right: 20px;
 }
 
 .heroes a:hover {
