--- a/online-store/src/app/components/product-detail/product-detail.component.css
+++ b/online-store/src/app/components/product-detail/product-detail.component.css
@@ -8,7 +8,7 @@
   width: 35%;
   padding: 10px;
   /*background: #FFF;*/
-  border: solid black 2px;
+  border: solid #f2f2f2 2px;
 
 }
 .column-2 {
