--- a/online-store/src/app/components/shared/footer/footer.component.html
+++ b/online-store/src/app/components/shared/footer/footer.component.html
@@ -32,7 +32,7 @@
 
     <p class="footer-company-about">
       <span>About the project</span>
-      Web Dev Trick is a blog for web designers, graphic designers, web developers &amp; SEO Learner.
+      Baisalov Damir, Tazhibek Abdullah, Alibekova Aigerim.
     </p>
 
   </div>
