--- a/online-store/src/app/components/product-list/product-list.component.css
+++ b/online-store/src/app/components/product-list/product-list.component.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  background: aquamarine;
+  background: #D3D3D3;
   border-radius: 10px;
 }
 [class*='col-'] {
