--- a/online-store/src/app/components/category-list/category-list.component.css
+++ b/online-store/src/app/components/category-list/category-list.component.css
@@ -1,10 +1,10 @@
-.heroes {
+.categories {
   margin: 0 auto;
   list-style-type: none;
   padding: 0;
   width: 15em;
 }
-.heroes li {
+.categories li {
   position: relative;
   cursor: pointer;
   background-color: #EEE;
@@ -15,13 +15,13 @@
   text-align: center;
 }
 
-.heroes li:hover {
+.categories li:hover {
   color: #607D8B;
   background-color: #DDD;
   left: .1em;
 }
 
-.heroes a {
+.categories a {
   color: #333;
   text-decoration: none;
   position: relative;
@@ -33,11 +33,11 @@
   padding-right: 20px;
 }
 
-.heroes a:hover {
+.categories a:hover {
   color:#607D8B;
 }
 
-.heroes .badge {
+.categories .badge {
   display: inline-block;
   font-size: small;
   color: white;
