--- a/online-store/src/app/components/category-list/category-list.component.html
+++ b/online-store/src/app/components/category-list/category-list.component.html
@@ -1,6 +1,6 @@
 <div class="centere">
 <h1 style="color:aquamarine;background: #5383d3"><B>Categories</B></h1>
-<ul class="heroes">
+<ul class="categories">
   <li *ngFor = "let category of categories">
    <a [routerLink]="['/categories/',category.id]">{{category.name}}</a>
   </li>
