--- a/online-store/src/app/components/product-list/product-list.component.css
+++ b/online-store/src/app/components/product-list/product-list.component.css
@@ -7,6 +7,8 @@
   text-align: center;
   background: #D3D3D3;
   border-radius: 10px;
+  width:fit-content;
+  height:fit-content;
 }
 [class*='col-'] {
   float: left;
@@ -69,6 +71,15 @@ h4 {
   .module {
     min-width: 60px;
   }
+}
+
+.image-cover img {
+  width: 100%;
+}
+.image-cover{
+  width: 80%;
+  height: 40%;
+  margin: 0 auto;
 }
 
 
