--- a/online-store/src/app/components/product-list/product-list.component.html
+++ b/online-store/src/app/components/product-list/product-list.component.html
@@ -4,11 +4,11 @@
 <div class="grid grid-pad">
 <a *ngFor = "let product of productsList" class="col-1-3">
   <div class="borders">
-    <div class="image-cover"><img [src]="product.image || product.image_src"
+    <div class="image-cover"><img [src]="product.image_src"
           [routerLink]="['/products', product.id ]" ></div>
     <p (click)= "onSelect(product)">
       <br><a routerLink="/products/{{product.id}}">
-      <span><h2>{{product.name}}</h2></span></a>
+      <span><h3>{{product.name}}</h3></span></a>
      <a><h4> Цена: {{product.price}} тнг.</h4></a>
     <br><button [routerLink]="['/products', product.id ]" class="myButton">Detail</button>
       <button (click)= "onAddToShopCart(product)" class="myButton">Add to Cart</button>
