--- a/online-store/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/online-store/src/app/components/shopping-cart/shopping-cart.component.html
@@ -12,7 +12,7 @@
       </p>
       <button class="myButton2">Checkout</button>
       <BR>
-      <button (click)= "removeProductFromCart(product) " class="myButton" >Remove from cart</button>
+      <button (click)= "deleteProductsFromCart(product) " class="myButton" >Remove from cart</button>
     </h3>
     <hr>
   </div>
